--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/75d61032b0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <h3><img src="images/Frame.png" alt="" width="5 rem" height="2.5 rem"><span>G</span>amer</h3>
+            <div class="nav-content">
+                <ul>
+                    <li>About Us</li>
+                    <li>Developers</li>
+                    <li><button>Follow Us On <a href="https://fontawesome.com/icons/youtube?f=brands&s=solid"></a><i
+                                class="fa-brands fa-youtube"></i><a
+                                href="https://fontawesome.com/icons/tiktok?f=brands&s=solid"><i
+                                    class="fa-brands fa-tiktok"></i></a></button></li>
+
+                </ul>
+            </div>
+
+        </nav>
+    </header>
 
 </body>
 
