gamer section added

--- a/index.html
+++ b/index.html
@@ -13,21 +13,50 @@
 <body>
     <header>
         <nav>
-            <h3><img src="images/Frame.png" alt="" width="5 rem" height="2.5 rem"><span>G</span>amer</h3>
-            <div class="nav-content">
-                <ul>
-                    <li>About Us</li>
-                    <li>Developers</li>
-                    <li><button>Follow Us On <a href="https://fontawesome.com/icons/youtube?f=brands&s=solid"></a><i
-                                class="fa-brands fa-youtube"></i><a
-                                href="https://fontawesome.com/icons/tiktok?f=brands&s=solid"><i
-                                    class="fa-brands fa-tiktok"></i></a></button></li>
+            <h3><img src="images/Frame.png" alt="" width="" height=""><span>G</span>amer</h3>
 
-                </ul>
-            </div>
+            <ul>
+                <li>About Us</li>
+                <li>Developers</li>
+                <li><button>Follow Us On <a class="y"
+                            href="https://fontawesome.com/icons/youtube?f=brands&s=solid"></a><span
+                            class="icon-color"><i class="fa-brands fa-youtube"></i></span><a class="t"
+                            href="https://fontawesome.com/icons/tiktok?f=brands&s=solid"><i
+                                class="fa-brands fa-tiktok"></i></a></button></li>
+
+            </ul>
+
 
         </nav>
+        <div class="container">
+            <div class="banner1">
+                <h3>Play Like The </h3>
+                <h2><span class="letters">G.O.A.T.</span></h2>
+                <h6><span class="icon-color"><i class="fa-solid fa-circle-play"></i></span>1-Click instant
+                    play</h6>
+                <h6><span class="icon-color"><i class="fa-solid fa-circle-down"></i></span>No Download</h6>
+                <h6><span><i class="fa-solid fa-users"></i></span>1000s of supported online games</h6>
+                <input class="sign-in" type="button" value="SIGN IN"><input class="go-rogue" type="button"
+                    value="GO ROGUE">
+            </div>
+            <div class="banner2">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </div>
     </header>
+    <main>
+        <section class="who-are-gamer">
+            <div class="gamer-intro1"><img src="images/pngwing 4.png" alt=""></div>
+            <div class="gamer-intro2">
+                <h1><span class="letters">We are Gamer</span></h1>
+                <p>An international digital games and entertainment company. We develop, publish and distribute
+                    multiplayer
+                    mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <input class="sign-in" type="button" value="KNOW MORE">
+                <h4 title="unleash the gamer in everyone ">Our purpose...</h4>
+            </div>
+        </section>
+    </main>
 
 </body>
 
