new sections are added

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
             <ul>
                 <li>About Us</li>
                 <li>Developers</li>
-                <li><button>Follow Us On <a class="y"
-                            href="https://fontawesome.com/icons/youtube?f=brands&s=solid"></a><span
-                            class="icon-color"><i class="fa-brands fa-youtube"></i></span><a class="t"
+                <li><button>Follow Us On <a class="" href="https://www.youtube.com/"></a><span class="icon-color"><i
+                                class="fa-brands fa-youtube"></i></span><a class=""
                             href="https://fontawesome.com/icons/tiktok?f=brands&s=solid"><i
                                 class="fa-brands fa-tiktok"></i></a></button></li>
 
@@ -55,6 +54,92 @@
                 <input class="sign-in" type="button" value="KNOW MORE">
                 <h4 title="unleash the gamer in everyone ">Our purpose...</h4>
             </div>
+        </section>
+        <section class="online-games-container">
+
+            <div class="online-con-heading">
+                <h1>Online Games <span class="letters">Funny Videos</span></h1>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="image-card">
+                <div><img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div><img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="image-container"><img src="images/Rectangle 7.png" alt="">
+                    <div class="video-overlay"><button></button><video controls>Watch Now
+                            <source src="images/Pigeon.mp4" type="video/mp4">
+                        </video></div>
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div> <img src="images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </section>
+        <section class="play-conti">
+
+            <div class="play-ins">
+                <h1><span class="letters">Play Instantly</span>,</h1>
+                <h1> No Downloads</h1>
+                <h1> No Installs.</h1>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
+            </div>
+            <div class="image-container">
+                <img src="images/Rectangle 55.png" alt="Main Image" class="main-image">
+                <img src="images/Rectangle 66.png" alt="Left Overlay" class="overlay overlay-left">
+
+            </div>
+        </section>
+        <section class="play-conti">
+
+
+            <div class="image-container">
+                <img src="images/Rectangle 67.png" alt="Main Image" class="main-image">
+                <img src="images/Rectangle 78.png" alt="Right Overlay" class="overlay overlay-right">
+
+            </div>
+            <div class="play-ins">
+                <h1><span class="letters">Play Games </span>,</h1>
+                <h1> Online Anywhere,</h1>
+                <h1> Anytime!</h1>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
+            </div>
+        </section>
+        <section class="careers-section">
+            <div class="width-measure">
+                <h2>Careers</h2>
+                <p>Gamer is driven to create the best and most fun games for our millions of players all around the
+                    world,
+                    and we,re always on the lookout for more top talent to join our growing team. If you,d like to help
+                    us
+                    make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                <div class="career-content">
+                    <div>
+                        <h4>Multimedia Artist +</h4>
+                        <h4>Data Engineer +</h4>
+                        <h4>Adroid Engineer +</h4>
+                        <h4>Server Developer +</h4>
+                        <h4>Group Financial Accountant +</h4>
+                        <h4>Senior User Acuisition Specialist +</h4>
+                    </div>
+                    <div>
+                        <h4>Lisbon, Portugal
+                            <h4>Lisbon, Portugal</h4>
+                            <h4>Lisbon, Portugal</h4>
+                            <h4>Lisbon, Portugal</h4>
+                            <h4> Zoetermeer, Netherlands</h4>
+                            <h4>London, United Kingdom</h4>
+                            <h4>Group Financial Accountant +</h4>
+                            <h4>Senior User Acuisition Specialist +</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="width-measure"><img src="images/Group 65.png" alt=""></div>
         </section>
     </main>
 
