image button and footer added

--- a/index.html
+++ b/index.html
@@ -141,8 +141,83 @@
             </div>
             <div class="width-measure"><img src="images/Group 65.png" alt=""></div>
         </section>
+        <section class="button-image-container">
+
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 11.png" alt="Button Image" class="button-image">
+                    <span class="button-text">Action Games</span>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 12.png" alt="Button Image" class="button-image">
+                    <span class="button-text">Adventure Games</span>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 13.png" alt="Button Image" class="button-image">
+                    <span class="button-text">Arcade Games</span>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 14.png" alt="Button Image" class="button-image">
+                    <span class="button-text">Educational Games</span>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 15.png" alt="Button Image" class="button-image">
+                    <span class="button-text">Role Playing Games</span>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 16.png" alt="Button Image" class="button-image">
+                    <span class="button-text">Puzzle Games</span>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 17.png" alt="Button Image" class="button-image">
+                    <span class="button-text">World Games</span>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 18.png" alt="Button Image" class="button-image">
+                    <span class="button-text">Music and Audio Games</span>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="image-button">
+                    <img src="images/Rectangle 19.png" alt="Button Image" class="button-image">
+                    <span class="button-text">Strategy Games</span>
+                </a>
+            </div>
+
+        </section>
     </main>
 
 </body>
+<footer>
+    <h3><img src="images/Frame.png" alt="" width="" height=""><span>G</span>amer</h3>
+    <span>Our Story</span> <span>Web Games</span> <span>Games</span><span>Careers</span><span>My Accounts</span>
+    <span>Support</span>
+    <i class="fa-brands fa-square-twitter"></i> <i class="fa-brands fa-facebook"></i><i
+        class="fa-brands fa-linkedin"></i>
+    <i class="fa-brands fa-square-instagram"></i><i class="fa-brands fa-square-whatsapp"></i><i
+        class="fa-brands fa-youtube"></i>
+    <br>
+    <br>
+    <span>Terms and Conditions</span>
+    <span>Privacy Policy</span>
+    <span>Cookie Policy</span>
+    <span>Privacy Settings</span>
+
+    <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+</footer>
 
 </html>
