one more button added

--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
                             <h4>Senior User Acuisition Specialist +</h4>
                     </div>
                 </div>
+                <input class="vacancy-hunt" type="button" value="See All Positions">
             </div>
+
             <div class="width-measure"><img src="images/Group 65.png" alt=""></div>
         </section>
         <section class="button-image-container">
