--- a/index.html
+++ b/index.html
@@ -205,11 +205,19 @@
 
 </body>
 <footer>
-    <h3><img src="images/Frame.png" alt="" width="" height=""><span>G</span>amer</h3>
+    <h3 class="footer-title"><img src="images/Frame.png" alt="" width="" height=""><span>G</span>amer</h3>
     <span>Our Story</span> <span>Web Games</span> <span>Games</span><span>Careers</span><span>My Accounts</span>
     <span>Support</span>
-    <i class="fa-brands fa-square-twitter"></i> <i class="fa-brands fa-facebook"></i><i
-        class="fa-brands fa-linkedin"></i>
+    <br>
+    <br>
+    <span><i class="fa-brands fa-square-twitter"></i></span>
+    <span><i class="fa-brands fa-facebook"></i></span>
+    <span><i class="fa-brands fa-facebook"></i></span>
+    <span><i class="fa-brands fa-facebook"></i></span>
+    <span><i class="fa-brands fa-facebook"></i></span>
+    <span><i class="fa-brands fa-facebook"></i></span>
+    <span><i class="fa-brands fa-facebook"></i></span>
+    <span><i>class="fa-brands fa-linkedin"></i></span>
     <i class="fa-brands fa-square-instagram"></i><i class="fa-brands fa-square-whatsapp"></i><i
         class="fa-brands fa-youtube"></i>
     <br>
