gradient color added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
     <header>
         <nav>
+
             <h3><img src="images/Frame.png" alt="" width="" height=""><span>G</span>amer</h3>
+
+
 
             <ul>
                 <li>About Us</li>
@@ -30,7 +33,7 @@
         <div class="container">
             <div class="banner1">
                 <h3>Play Like The </h3>
-                <h2><span class="letters">G.O.A.T.</span></h2>
+                <h2><span class="gradient-text">G.O.A.T.</span></h2>
                 <h6><span class="icon-color"><i class="fa-solid fa-circle-play"></i></span>1-Click instant
                     play</h6>
                 <h6><span class="icon-color"><i class="fa-solid fa-circle-down"></i></span>No Download</h6>
@@ -47,7 +50,7 @@
         <section class="who-are-gamer">
             <div class="gamer-intro1"><img src="images/pngwing 4.png" alt=""></div>
             <div class="gamer-intro2">
-                <h1><span class="letters">We are Gamer</span></h1>
+                <h1><span class="gradient-text">We are Gamer</span></h1>
                 <p>An international digital games and entertainment company. We develop, publish and distribute
                     multiplayer
                     mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
@@ -58,7 +61,7 @@
         <section class="online-games-container">
 
             <div class="online-con-heading">
-                <h1>Online Games <span class="letters">Funny Videos</span></h1>
+                <h1>Online Games <span class="gradient-text">Funny Videos</span></h1>
                 <p>A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
             <div class="image-card">
@@ -82,7 +85,7 @@
         <section class="play-conti">
 
             <div class="play-ins">
-                <h1><span class="letters">Play Instantly</span>,</h1>
+                <h1><span class="gradient-text">Play Instantly</span>,</h1>
                 <h1> No Downloads</h1>
                 <h1> No Installs.</h1>
                 <p>Play games online for free without downloading. Just click the Play button and play instantly in your
@@ -103,8 +106,8 @@
 
             </div>
             <div class="play-ins">
-                <h1><span class="letters">Play Games </span>,</h1>
-                <h1> Online Anywhere,</h1>
+                <h1><span class="gradient-text">Play Games </span>,</h1>
+                <h1> <span class="gradient-text">Online</span> Anywhere,</h1>
                 <h1> Anytime!</h1>
                 <p>Play games online for free without downloading. Just click the Play button and play instantly in your
                     browser.</p>
@@ -205,29 +208,30 @@
 
 </body>
 <footer>
-    <h3 class="footer-title"><img src="images/Frame.png" alt="" width="" height=""><span>G</span>amer</h3>
-    <span>Our Story</span> <span>Web Games</span> <span>Games</span><span>Careers</span><span>My Accounts</span>
-    <span>Support</span>
+    <h3 class="footer-title"><img src="images/Frame.png" alt="" width="" height="">
+        <span>G</span>amer
+    </h3>
+    <div class="footer-items"><span>Our Story</span> <span>Web Games</span> <span>Games</span><span>Careers</span>
+        <span>My Accounts</span><span>Support</span>
+    </div>
     <br>
     <br>
-    <span><i class="fa-brands fa-square-twitter"></i></span>
-    <span><i class="fa-brands fa-facebook"></i></span>
-    <span><i class="fa-brands fa-facebook"></i></span>
-    <span><i class="fa-brands fa-facebook"></i></span>
-    <span><i class="fa-brands fa-facebook"></i></span>
-    <span><i class="fa-brands fa-facebook"></i></span>
-    <span><i class="fa-brands fa-facebook"></i></span>
-    <span><i>class="fa-brands fa-linkedin"></i></span>
-    <i class="fa-brands fa-square-instagram"></i><i class="fa-brands fa-square-whatsapp"></i><i
-        class="fa-brands fa-youtube"></i>
+    <div class="footer-items">
+        <span><i class="fa-brands fa-square-twitter"></i></span>
+        <span><i class="fa-brands fa-facebook"></i></span>
+        <span><i class="fa-brands fa-tiktok"></i></span>
+        <span><i class="fa-brands fa-square-instagram"></i></span>
+        <span><i class="fa-brands fa-linkedin"></i></span>
+        <span><i class="fa-brands fa-square-whatsapp"></i></span>
+        <span><i class="fa-brands fa-youtube"></i></span>
+    </div>
     <br>
-    <br>
-    <span>Terms and Conditions</span>
-    <span>Privacy Policy</span>
-    <span>Cookie Policy</span>
-    <span>Privacy Settings</span>
-
-    <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+    <div class="footer-items"> <span>Terms and Conditions</span>
+        <span>Privacy Policy</span>
+        <span>Cookie Policy</span>
+        <span>Privacy Settings</span>
+    </div>
+    <h6 class="footer-items"><small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small></h6>
 </footer>
 
 </html>
